fix navbar link

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
       <nav>
         <ul class="flex lg:items-center flex-col lg:flex-row gap-5 lg:gap-2">
           <li class="nav__menu lg:py-7" :class="{ 'lg:!py-4' : stickyMenu }">
-            <a href="/#home"
+            <a href="https://osjobs.net/en/#home"
               class="relative text-white/80 text-sm py-1.5 px-4 border border-transparent hover:text-white hover:nav-gradient"
               :class="{'!text-white nav-gradient' :page === 'home'}">Home</a>
           </li>
           <li class="nav__menu lg:py-7" :class="{ 'lg:!py-4' : stickyMenu }">
-            <a href="/#features"
+            <a href="https://osjobs.net/en/#features"
               class="relative text-white/80 text-sm py-1.5 px-4 border border-transparent hover:text-white hover:nav-gradient">Features</a>
           </li>
           <li class="nav__menu lg:py-7" :class="{ 'lg:!py-4' : stickyMenu }">
-            <a href="/#coaches"
+            <a href="https://osjobs.net/en/#coaches"
               class="relative text-white/80 text-sm py-1.5 px-4 border border-transparent hover:text-white hover:nav-gradient">Our Coaches</a>
           </li>
           <li class="nav__menu lg:py-7" :class="{ 'lg:!py-4' : stickyMenu }">
-            <a href="/#pricing"
+            <a href="https://osjobs.net/en/#pricing"
               class="relative text-white/80 text-sm py-1.5 px-4 border border-transparent hover:text-white hover:nav-gradient">Pricing</a>
           </li>
           <li class="nav__menu lg:py-7" :class="{ 'lg:!py-4' : stickyMenu }">
